fixed chrome blurry image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,8 @@ body {
 
 img {
   image-rendering: -webkit-optimize-contrast !important;
+  -webkit-transform-style: preserve-3d !important;
+  transform-style: preserve-3d;
 }
 
 a {
